# cpp-bootstrap

./: cpp-bootstrap
template/: .gitignore  CMakeLists.txt  LICENSE  README.md
template/include/PROJECT_NAME/: PROJECT_NAME.hpp
template/src/: CMakeLists.txt  main.cpp
template/src/PROJECT_NAME/: CMakeLists.txt  PROJECT_NAME.cpp
template/test/: CMakeLists.txt
